--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "monsters-rolodex",
+  "name": "kittensgarden",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://zhangmyihua.github.io/monsters-rolodex",
+  "homepage": "https://engammar111.github.io/kittensgardens",
   "dependencies": {
     "gh-pages": "2.0.1",
     "react": "^16.8.6",
@@ -16,7 +16,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "yarn build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
